Failing proxy test.